--- a/index.html
+++ b/index.html
@@ -1,1 +1,197 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CSCI 5607 – Raytracer Project 3B Results</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      color: #222;
+      margin: 40px;
+      line-height: 1.6;
+    }
+    h1, h2, h3 {
+      text-align: center;
+    }
+    h1 { margin-bottom: 10px; }
+    .section {
+      max-width: 1000px;
+      background: #fff;
+      margin: 40px auto;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 6px rgba(0,0,0,0.15);
+    }
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+      gap: 18px;
+      margin-top: 25px;
+    }
+    .item {
+      background: #fafafa;
+      padding: 10px;
+      border-radius: 8px;
+      box-shadow: 0 0 4px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+    img {
+      width: 100%;
+      border-radius: 6px;
+    }
+    a.btn {
+      display: inline-block;
+      background: #0066cc;
+      color: #fff;
+      padding: 10px 16px;
+      border-radius: 5px;
+      margin-top: 10px;
+      text-decoration: none;
+      transition: background 0.3s;
+    }
+    a.btn:hover { background: #004b99; }
+    footer {
+      text-align: center;
+      margin-top: 60px;
+      color: #555;
+    }
+  </style>
+</head>
+<body>
+  <h1>Raytracer Project 3B – Final Results</h1>
+  <p style="text-align:center;">By Samra Huseynova | CSCI 5607 – Fall 2025</p>
+
+  <p style="text-align:center;font-size:1.1em;">
+    🔗 View full project on GitHub: 
+    <a href="https://github.com/sh1303/Project3-b" target="_blank">
+      https://github.com/sh1303/Project3-b
+    </a>
+  </p>
+
+  <p style="text-align:center;">
+    📁 <a class="btn" href="https://drive.google.com/file/d/1NHfzP8qqYUoJ5Yi7CRR13vB6c_5g-H2h/view?usp=sharing" target="_blank">
+      Download Project Files (Google Drive)
+    </a>
+  </p>
+
+  <div class="section">
+    <h2>📘 Overview</h2>
+    <p>
+      This project extends the previous ray tracer by supporting <strong>arbitrary camera placement, complex geometry, and physically based materials</strong>.  
+      Additional features include <em>point, directional, and ambient lighting</em>; sampling techniques such as jittered and adaptive supersampling; and recursive ray tracing with reflection, refraction, and depth control.  
+      Each section below highlights a specific component of the system, illustrated with the rendered outputs.
+    </p>
+  </div>
+
+  <div class="section">
+    <h2>🎥 Arbitrary Camera Placement, Film Resolution & Aspect Ratio</h2>
+    <p>
+      The <strong>bear series</strong> explores different camera positions, aspect ratios, and film resolutions.  
+      Small changes in camera orientation significantly affect perspective and scene composition.
+    </p>
+    <div class="gallery">
+      <div class="item"><img src="bear.png" alt="Bear scene 1"></div>
+      <div class="item"><img src="bear2.png" alt="Bear scene 2"></div>
+      <div class="item"><img src="bear3.png" alt="Bear scene 3"></div>
+      <div class="item"><img src="bear4.png" alt="Bear scene 4"></div>
+      <div class="item"><img src="bear5.png" alt="Bear scene 5"></div>
+      <div class="item"><img src="bear6.png" alt="Bear scene 6"></div>
+      <div class="item"><img src="bear7.png" alt="Bear scene 7"></div>
+      <div class="item"><img src="IMG_1208.PNG" alt="Bear photograph reference"></div>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>🌄 Arbitrary Scenes with Spheres and Triangles</h2>
+    <p>
+      The <strong>outdoor renders</strong> demonstrate scenes containing both spheres and triangle meshes, using custom background colors and multiple geometric primitives.
+    </p>
+    <div class="gallery">
+      <div class="item"><img src="outdoor.png" alt="Outdoor scene 1"></div>
+      <div class="item"><img src="outdoor1.png" alt="Outdoor scene 2"></div>
+      <div class="item"><img src="outdoor2.png" alt="Outdoor scene 3"></div>
+      <div class="item"><img src="outdoor4.png" alt="Outdoor scene 4"></div>
+      <div class="item"><img src="outdoor5.png" alt="Outdoor scene 5"></div>
+      <div class="item"><img src="outdoor6.png" alt="Outdoor scene 6"></div>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>🎨 Arbitrary Materials – Diffuse, Specular, Reflection & Refraction</h2>
+    <p>
+      The <strong>foo renders</strong> show different material types and surface interactions.  
+      Reflection and refraction were implemented recursively with bounded depth for realistic transparency and highlights.
+    </p>
+    <div class="gallery">
+      <div class="item"><img src="foo.png" alt="Foo"></div>
+      <div class="item"><img src="foo1.png" alt="Foo1"></div>
+      <div class="item"><img src="foo2.png" alt="Foo2"></div>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>💡 Point, Directional & Ambient Lighting</h2>
+    <p>
+      Lighting experiments with <strong>spotlights and directional lights</strong> were performed to evaluate diffuse and specular responses under multiple sources.
+    </p>
+    <div class="gallery">
+      <div class="item"><img src="spot.png" alt="Spot Light 1"></div>
+      <div class="item"><img src="spot2.png" alt="Spot Light 2"></div>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>🪶 Procedural Plane and Contrast Test</h2>
+    <p>
+      This render demonstrates the <strong>plane primitive</strong> and material contrast effects used for geometric calibration and shadow accuracy.
+    </p>
+    <div class="gallery">
+      <div class="item"><img src="plane_contrast.png" alt="Plane contrast"></div>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>🎯 Sampling Techniques & Performance Comparison</h2>
+    <p>
+      The ray tracer was enhanced with <strong>adaptive and jittered sampling</strong>.  
+      The following images compare sampling quality and the time each method required.
+    </p>
+    <div class="gallery">
+      <div class="item"><img src="no_sampling.png" alt="No Sampling"></div>
+      <div class="item"><img src="sampling_jitter.png" alt="Jittered Sampling"></div>
+      <div class="item"><img src="sampling_adaptive.png" alt="Adaptive Sampling"></div>
+      <div class="item"><img src="jitter_sampling_time.png" alt="Jitter Sampling Time"></div>
+      <div class="item"><img src="adaptive_time.png" alt="Adaptive Sampling Time"></div>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>🐉 Complex Scene – Dragon Model</h2>
+    <p>
+      The <strong>dragon scene</strong> tests the renderer’s ability to handle highly detailed geometry and many recursive light interactions.
+    </p>
+    <div class="gallery">
+      <div class="item"><img src="dragon.png" alt="Dragon render"></div>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>🌀 Recursive Depth Control</h2>
+    <p>
+      Varying the <code>max_depth</code> parameter affects how many times rays bounce or refract.  
+      These <strong>spheres renders</strong> demonstrate depth-dependent reflection intensity and realism.
+    </p>
+    <div class="gallery">
+      <div class="item"><img src="spheres1.png" alt="Spheres depth test 1"></div>
+      <div class="item"><img src="spheres2.png" alt="Spheres depth test 2"></div>
+    </div>
+  </div>
+
+  <footer>
+    <p>© 2025 Samra Huseynova | University of Minnesota – College of Science & Engineering</p>
+  </footer>
+</body>
+</html>
 
