--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
   </p>
   <p>
     At the end, I used the <strong>stb_image</strong> library to save all the final renders as PNG files. 
-    I also added timing code using C++’s <strong>chrono</strong> library to measure how long each render took.
+    I also added timing code using C++’s <strong>chrono</strong> library to measure how long each render took. Some parts in header files and txt files have been modified to fullfill and
+    test the project requirements. 
   </p>
 </section>
 
@@ -213,7 +214,7 @@
   </div>
     <div class="section">
     <h2>Late submission</h2>
-    <p>Unfortunately, I couldn't submit project on time. I wanted to spare some time for Halloween and make fun memories with friends. Here is me as Lara Croft. :) </p>
+    <p>Unfortunately, I couldn't submit project on time. I wanted to spare some time for Halloween and make fun memories with friends. Here is me as Lara Croft :) </p>
     <div class="gallery">
       <div class="item"><img src="images/IMG_1208.PNG"></div>
     </div>
